--- a/EAM_3/userpass.html
+++ b/EAM_3/userpass.html
@@ -9,7 +9,7 @@
     <meta name="viewport" content="width=device-width, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
  
      <!-- Site Metas -->
-    <title>ΟΑΣΑ Επικοινωνία</title>  
+    <title>ΟΑΣΑ Είσοδος/Εγγραφή</title>  
     <meta name="keywords" content="">
     <meta name="description" content="">
     <meta name="author" content="">
@@ -136,21 +136,15 @@
     
                     <div id="stops" class="tab-pane fade">
                         <div class="contact_form">
-                            <h2>Πληροφορίες Στάσης</h2>
-                            <form id="contactform1" class="row" name="contactform" method="post">
-                                <fieldset class="row-fluid">
-                                    <div class="col-lg-12 col-md-6 col-sm-6 col-xs-12">
-                                        <br/><h4>Επιλέξτε στάση:</h4>
-                                            <input type="text" name="line" id="line" class="form-control" style="margin-top:5px;" placeholder="">
-                                    </div>
-                                    <div class="col-lg-12 col-md-6 col-sm-6 col-xs-12">
-                                        <h4>ή διεύθυνση:</h4>
-                                        <input type="text" name="line" id="line" class="form-control" style="margin-top:5px;" placeholder="">
-                                    </div>
-                                    <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4 col-lg-offset-8 text-center">
-                                        <button type="submit" value="SEND" id="submit" class="btn btn-light btn-radius btn-brd grd1 btn-block">>></button>
-                                    </div>
-                                </fieldset>
+                            <form id="register-form" method="post" action="register.php">
+                                <input type="text" name="username" class="username form-control" placeholder="Email" placeholder="Email" pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,3}$" required oninvalid="setCustomValidity('Άδειο πεδίο ή μη έγκυρη διεύθυνση email! Προσθέστε έγκυρη διεύθυνση email.')" oninput="setCustomValidity('')"/>
+                                <input type="password" name="password1" class="password form-control" placeholder="Συνθηματικό" required oninvalid="setCustomValidity('Άδειο πεδίο! Προσθέστε συνθηματικό.')" oninput="setCustomValidity('')"/>
+                                <input type="password" name="password2" class="password form-control" placeholder="Επανάληψη Συνθηματικού" required oninvalid="setCustomValidity('Άδειο πεδίο! Επαναλάβετε το συνθηματικό.')" oninput="setCustomValidity('')"/>
+                                <input type="text" name="name" class="username form-control" placeholder="Όνομα" required oninvalid="setCustomValidity('Άδειο πεδίο! Προσθέστε όνομα.')" oninput="setCustomValidity('')"/>
+                                <input type="text" name="surname" class="username form-control" placeholder="Επώνυμο" required oninvalid="setCustomValidity('Άδειο πεδίο! Προσθέστε επώνυμο.')" oninput="setCustomValidity('')"/>
+                                <input type="text" name="address" class="username form-control" placeholder="Διεύθυνση" required oninvalid="setCustomValidity('Άδειο πεδίο! Προσθέστε διεύθυνση')" oninput="setCustomValidity('')"/>
+                                <input class="btn login" type="submit" value="Εγγραφή" style="background-color:#00599C"/>
+                                <input class="btn login" type="reset" value="Καθαρισμός" style="background-color:#00599C"/>
                             </form>
                         </div>
                     </div>
