--- a/EAM_3/buses.html
+++ b/EAM_3/buses.html
@@ -191,8 +191,18 @@
                                 <form id="contactform1" class="row" name="contactform" method="post">
                                     <fieldset class="row-fluid">
                                         <div class="col-lg-12 col-md-6 col-sm-6 col-xs-12">
-                                        <br/><h4>Επιλέξτε γραμμή:</h4>
-                                            <input type="text" name="line" id="line" class="form-control" style="margin-top:5px;" placeholder="">
+                                            <br/><h4>Επιλέξτε γραμμή:</h4>
+                                            <select name="select_bus" id="select_bus" class="selectpicker form-control" data-style="btn-white">
+                                            <!--<input type="text" name="line" id="line" class="form-control" style="margin-top:5px;" placeholder="">-->
+                                                <?php  
+
+                                                require('db_connect.php');
+                                                $sql = mysqli_query($connection, "SELECT * FROM `buses`");
+                                                while ($row = $sql->fetch_assoc()){
+                                                    echo "<option value=\"bus1\">" . $row['id'] . "</option>";
+                                                }
+                                                ?>
+                                            </select>
                                         </div>
                                         <div class="col-lg-12 col-md-6 col-sm-6 col-xs-12">
                                             <h4>ή διεύθυνση:</h4>
